part2/confs/yamls/app2/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: kube-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
      volumes:
      - name: html-volume
        hostPath:
          path: /vagrant/confs/apps/app2
