part2/confs/yamls/app2/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: kube-system
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
